# vidya

./: CLAUDE.md  LICENSE  README.md  env.example  pyproject.toml
docs/: design.md  implementation-plan.md  phase2-spec.md  reference.md
docs/plans/: 2026-04-01-maintain-and-structured-capture.md  2026-04-06-confidence-rework-design.md  2026-04-06-confidence-rework-plan.md  2026-04-10-knowledge-evolution-design-critique.md  2026-04-10-knowledge-evolution-design.md  2026-04-10-knowledge-evolution-plan.md  2026-05-02-knowledge-audit-design.md  2026-05-02-knowledge-audit-plan.md
hooks/: codex-vidya-post-tool-use.py  codex-vidya-session-start.py  codex-vidya-user-prompt-submit.py  vidya-error-feedback-hook.py  vidya-prompt-hook.py  vidya-session-brief-hook.py
scripts/seeds/: canon.md
src/vidya/: __init__.py  audit.py  brief.py  cli.py  confidence.py  evolve.py  guidance.py  learn.py  maintain.py  mcp_server.py  migrate.py  query.py  schema.py  seed.py  store.py
tests/: conftest.py  test_audit.py  test_brief.py  test_cli.py  test_confidence.py  test_evolve.py  test_guidance.py  test_guidance_evolve.py  test_learn.py  test_maintain.py  test_migrate.py  test_query.py  test_seed.py  test_store.py
using-vidya/: SKILL.md
using-vidya/evals/: evals.json
