[project]
name = "vidya"
version = "0.1.0"
description = "Agent-agnostic procedural learning system"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

dependencies = [
    "mcp>=1.9.0",
    "click>=8.1",
]

[project.scripts]
vidya = "vidya.cli:main"
vidya-server = "vidya.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vidya"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
