[project]
name = "vidya"
version = "0.1.0"
description = "Agent-agnostic procedural learning system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "litellm>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vidya = "vidya.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vidya"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
